chore: 도커 관련 변경사항

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - ./static:/djangoproject/static
     command: >
       bash -c "
+      python3 manage.py makemigrations survey huami&&
       python3 manage.py migrate&& 
       gunicorn apop2.wsgi -b 0.0.0.0:8000"
     ports:
