--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ gunicorn==21.2.0
 mysqlclient==2.2.1
 djangorestframework==3.14.0
 drf-spectacular==0.27.1
-apscheduler==3.10.4
+django-apscheduler==0.6.2
