--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.7"
 services:
   nginx:
     image: nginx:1.25.3
@@ -8,22 +7,23 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./static:/data/static
     ports:
-      - 80:80
+      - '8099:80'
     depends_on:
-      - apop
+      - 'apop'
   
   apop:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: apop
+    container_name: 'apop'
+    restart: always
     networks:
       - network
     volumes:
       - ./static:/djangoproject/static
     command: >
       bash -c "
-      python3 manage.py makemigrations survey huami&&
+      python3 manage.py makemigrations survey huami accounts&&
       python3 manage.py migrate&& 
       gunicorn apop2.wsgi -b 0.0.0.0:8000"
     ports:
@@ -31,7 +31,10 @@ services:
     expose:
       - "8000"
     depends_on:
-      - db
+      - 'db'
+    environment:
+      CSRF_TRUSTED_ORIGINS: ''
+      AUTH_KEY: ''
   
   db:
     image: mariadb:11.1.3
@@ -44,11 +47,10 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MARIADB_DATABASE : apopdb
+      MARIADB_DATABASE: apopdb
       MARIADB_USER: example-user
       MARIADB_PASSWORD: example-password
       MARIADB_ROOT_PASSWORD: password
-    
 
 networks:
   network:
