chore: 백업 자동화 관련 docker compose 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,15 @@ services:
       AUTH_KEY: ''
   
   db:
-    image: mariadb:11.1.3
+    build:
+      context: mariadb
+      dockerfile: Dockerfile
     restart: always
     container_name: mariadb
     volumes:
       - mariadb-database:/var/lib/mysql
+      - ./backup.sh:/backup.sh
+      - ./backups:/backups
     networks:
       - network
     ports:
@@ -51,9 +55,15 @@ services:
       MARIADB_USER: example-user
       MARIADB_PASSWORD: example-password
       MARIADB_ROOT_PASSWORD: password
+    command:
+      sh -c "
+      chmod +x /backup.sh &&
+      echo '0 0 * * * /backup.sh' | crontab - &&
+      cron -f -L 2"
 
 networks:
   network:
 
 volumes:
   mariadb-database:
+  backups:
