--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: nginx:1.25.3
     networks:
       - network
+    restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./static:/data/static
@@ -38,13 +39,12 @@ services:
   
   db:
     build:
-      context: mariadb
-      dockerfile: Dockerfile
+      context: ./mariadb
+      dockerfile: ./Dockerfile
     restart: always
     container_name: mariadb
     volumes:
       - mariadb-database:/var/lib/mysql
-      - ./backup.sh:/backup.sh
       - ./backups:/backups
     networks:
       - network
@@ -57,9 +57,8 @@ services:
       MARIADB_ROOT_PASSWORD: password
     command:
       sh -c "
-      chmod +x /backup.sh &&
-      echo '0 0 * * * /backup.sh' | crontab - &&
-      cron -f -L 2"
+      service cron start&&
+      mariadbd -u root"
 
 networks:
   network:
