--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     environment:
       CSRF_TRUSTED_ORIGINS: "https://dai427.cbnu.ac.kr"
       AUTH_KEY: 'kong21'
+    env_file:
+      - .env
 
   db:
     build:
