--- a/nginx.conf
+++ b/nginx.conf
@@ -6,10 +6,13 @@ events {
 }
 
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    # HTTP
     server {
         listen 80;
-
-        include mime.types;
+        server_name dai427.cbnu.ac.kr;
 
         location /static/ {
             alias /data/static/;
@@ -18,6 +21,27 @@ http {
         location / {
             proxy_pass http://apop:8000;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
+
+    # HTTPS
+    server {
+        listen 443 ssl;
+        server_name dai427.cbnu.ac.kr;
+
+        ssl_certificate /etc/letsencrypt/live/dai427.cbnu.ac.kr/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dai427.cbnu.ac.kr/privkey.pem;
+
+        location /static/ {
+            alias /data/static/;
+        }
+
+        location / {
+            proxy_pass http://apop:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
