--- a/static_src/manifest.json
+++ b/static_src/manifest.json
@@ -8,12 +8,12 @@
   "description": "조기진통 감지 및 스트레스 완화 어플",
   "icons": [
     {
-      "src": "/static_src/IC_LOGO_192.png",
+      "src": "/static/IC_LOGO_192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static_src/IC_LOGO_512.png",
+      "src": "/static/IC_LOGO_512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
