스케쥴러 오류 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    command: python jobs/scheduler.py
+    command: python -u jobs/scheduler.py
     depends_on:
       - db
     env_file:
